--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -140,106 +140,106 @@
 
 	function getYear2023(){
 	 var list = [];
-  list.push("	Villa-1	,,,,,");
-  list.push("	Villa-2	,,,,,");
-  list.push("	Villa-3	,,,,,");
-  list.push("	Villa-4	,Bhupesh Saini,,,,");
-  list.push("	Villa-5	,,,,,");
-  list.push("	Villa-6	,,,,,");
-  list.push("	Villa-7	,Rahul Pandey,,,,");
-  list.push("	Villa-8	,,,,,");
-  list.push("	Villa-9	,Raghvendra Sharma,,,,");
-  list.push("	Villa-10	,Jogendra Sachdeva,,,,");
-  list.push("	Villa-11	,,,,,");
-  list.push("	Villa-12	,Gaurav Kothari,,,,");
-  list.push("	Villa-13	,Anil Sharma,,,,");
-  list.push("	Villa-14	,,,,,");
-  list.push("	Villa-15	,,,,,");
-  list.push("	Villa-16	,,,,,");
-  list.push("	Villa-17	,,,,,");
-  list.push("	Villa-18	,,,,,");
-  list.push("	Villa-19	,,,,,");
-  list.push("	Villa-20	,Ved Prakash Parashar,,,,");
-  list.push("	Villa-21	,,,,,");
-  list.push("	Villa-22	,,,,,");
-  list.push("	Villa-23	,,,,,");
-  list.push("	Villa-24	,Abhimanyu Saraswat,,,,");
-  list.push("	Villa-25	,,,,,");
-  list.push("	Villa-26	,Rakesh Kumar,,,,");
-  list.push("	Villa-27	,Deepesh Sharma,,,,");
-  list.push("	Villa-28	,Mohit Juneja,,,,");
-  list.push("	Villa-29	,,,,,");
-  list.push("	Villa-30	,,,,,");
-  list.push("	Villa-31	,,,,,");
-  list.push("	Villa-32	,,,,,");
-  list.push("	Villa-33	,Prakash Joshi,500,500,500,");
-  list.push("	Villa-34	,Vijay Meena,,,,");
-  list.push("	Villa-35	,,,,,");
-  list.push("	Villa-36	,,,,,");
-  list.push("	Villa-37	,Gajendra Sharma,,,,");
-  list.push("	Villa-38	,,,,,");
-  list.push("	Villa-39	,Manish Salvi,,,,");
-  list.push("	Villa-40	,,,,,");
-  list.push("	Villa-41	,,,,,");
-  list.push("	Villa-42	,,,,,");
-  list.push("	Villa-43	,Arun Tripathi,,,,");
-  list.push("	Villa-44	,Ravindra Verma,,,,,");
-  list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,");
-  list.push("	Villa-46	,Vikas Mahala,,,,");
-  list.push("	Villa-47	,Manoj,,,,");
-  list.push("	Villa-48	,,,,,");
-  list.push("	Villa-49	,,,,,");
-  list.push("	Villa-50	,,,,,");
-  list.push("	Villa-51	,,,,,");
-  list.push("	Villa-52	,Shailesh Bansal,,,,");
-  list.push("	Villa-53	,Rohit Jain,,,,");
-  list.push("	Villa-54	,,,,,");
-  list.push("	Villa-55	,,,,,");
-  list.push("	Villa-56	,,,,,");
-  list.push("	Villa-57	,,,,,");
-  list.push("	Villa-58	,,,,,");
-  list.push("	Villa-59	,,,,,");
-  list.push("	Villa-60	,,,,,");
-  list.push("	Villa-61	,,,,,");
-  list.push("	Villa-62	,,,,,");
-  list.push("	Villa-63	,,,,,");
-  list.push("	Villa-64	,,,,,");
-  list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,");
-  list.push("	Villa-66	,,,,,");
-  list.push("	Villa-67	,Abhishek Jaiman,,,,");
-  list.push("	Villa-68	,Shrish Jaiman,,,,");
-  list.push("	Villa-69	,Piyush,,,,");
-  list.push("	Villa-70	,,,,,");
-  list.push("	Villa-71	,Suresh kumar Sharma,,,,");
-  list.push("	Villa-72	,Nikesh Chaudhary,,,,");
-  list.push("	Villa-73	,Richa Sharma,,,,");
-  list.push("	Villa-74	,,,,,");
-  list.push("	Villa-75	,,,,,");
-  list.push("	Villa-76	,,,,,");
-  list.push("	Villa-77	,,,,,");
-  list.push("	Villa-78	,,,,,");
-  list.push("	Villa-79	,,,,,");
-  list.push("	Villa-80	,,,,,");
-  list.push("	Villa-81	,,,,,");
-  list.push("	Villa-82	,,,,,");
-  list.push("	Villa-83	,,,,,");
-  list.push("	Villa-84	,,,,,");
-  list.push("	Villa-85	,,,,,");
-  list.push("	Villa-86	,,,,,");
-  list.push("	Villa-87	,,,,,");
-  list.push("	Villa-88	,Pankaj Chauhan,,,,");
-  list.push("	Villa-89	,,,,,");
-  list.push("	Villa-90	,,,,,");
-  list.push("	Villa-91	,,,,,");
-  list.push("	Villa-92	,,,,,");
-  list.push("	Villa-93	,,,,,");
-  list.push("	Villa-94	,,,,,");
-  list.push("	Villa-95	,,,,,");
-  list.push("	Villa-96	,,,,,");
-  list.push("	Villa-97	,,,,,");
-  list.push("	Villa-98	,,,,,");
-  list.push("	Villa-99	,,,,,");
-  list.push("	Villa-100	,,,,,");
+  list.push("	Villa-1	,,,,,,,");
+  list.push("	Villa-2	,,,,,,,");
+  list.push("	Villa-3	,,,,,,,");
+  list.push("	Villa-4	,Bhupesh Saini,,,,,,");
+  list.push("	Villa-5	,,,,,,,");
+  list.push("	Villa-6	,,,,,,,");
+  list.push("	Villa-7	,Rahul Pandey,,,,,,");
+  list.push("	Villa-8	,,,,,,,");
+  list.push("	Villa-9	,Raghvendra Sharma,,,,,,");
+  list.push("	Villa-10	,Jogendra Sachdeva,,,,,,");
+  list.push("	Villa-11	,,,,,,,");
+  list.push("	Villa-12	,Gaurav Kothari,,,,,,");
+  list.push("	Villa-13	,Anil Sharma,,,,,,");
+  list.push("	Villa-14	,,,,,,,");
+  list.push("	Villa-15	,,,,,,,");
+  list.push("	Villa-16	,,,,,,,");
+  list.push("	Villa-17	,,,,,,,");
+  list.push("	Villa-18	,,,,,,,");
+  list.push("	Villa-19	,,,,,,,");
+  list.push("	Villa-20	,Ved Prakash Parashar,,,,,,");
+  list.push("	Villa-21	,,,,,,,");
+  list.push("	Villa-22	,,,,,,,");
+  list.push("	Villa-23	,,,,,,,");
+  list.push("	Villa-24	,Abhimanyu Saraswat,,,,,,");
+  list.push("	Villa-25	,,,,,,,");
+  list.push("	Villa-26	,Rakesh Kumar,,,,,,");
+  list.push("	Villa-27	,Deepesh Sharma,,,,,,");
+  list.push("	Villa-28	,Mohit Juneja,,,,,,");
+  list.push("	Villa-29	,,,,,,,");
+  list.push("	Villa-30	,,,,,,,");
+  list.push("	Villa-31	,,,,,,,");
+  list.push("	Villa-32	,,,,,,,");
+  list.push("	Villa-33	,Prakash Joshi,500,500,500,,,");
+  list.push("	Villa-34	,Vijay Meena,,,,,,");
+  list.push("	Villa-35	,,,,,,,");
+  list.push("	Villa-36	,,,,,,,");
+  list.push("	Villa-37	,Gajendra Sharma,,,,,,");
+  list.push("	Villa-38	,,,,,,,");
+  list.push("	Villa-39	,Manish Salvi,,,,,,");
+  list.push("	Villa-40	,,,,,,,");
+  list.push("	Villa-41	,,,,,,,");
+  list.push("	Villa-42	,,,,,,,");
+  list.push("	Villa-43	,Arun Tripathi,,,,,,");
+  list.push("	Villa-44	,Ravindra Verma,,,,,,,");
+  list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,,,");
+  list.push("	Villa-46	,Vikas Mahala,,,,,,");
+  list.push("	Villa-47	,Manoj,,,,,,");
+  list.push("	Villa-48	,,,,,,,");
+  list.push("	Villa-49	,,,,,,,");
+  list.push("	Villa-50	,,,,,,,");
+  list.push("	Villa-51	,,,,,,,");
+  list.push("	Villa-52	,Shailesh Bansal,,,,,,");
+  list.push("	Villa-53	,Rohit Jain,,,,,,");
+  list.push("	Villa-54	,,,,,,,");
+  list.push("	Villa-55	,,,,,,,");
+  list.push("	Villa-56	,,,,,,,");
+  list.push("	Villa-57	,,,,,,,");
+  list.push("	Villa-58	,,,,,,,");
+  list.push("	Villa-59	,,,,,,,");
+  list.push("	Villa-60	,,,,,,,");
+  list.push("	Villa-61	,,,,,,,");
+  list.push("	Villa-62	,,,,,,,");
+  list.push("	Villa-63	,,,,,,,");
+  list.push("	Villa-64	,,,,,,,");
+  list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,,,");
+  list.push("	Villa-66	,,,,,,,");
+  list.push("	Villa-67	,Abhishek Jaiman,,,,,,");
+  list.push("	Villa-68	,Shrish Jaiman,,,,,,");
+  list.push("	Villa-69	,Piyush,,,,,,");
+  list.push("	Villa-70	,,,,,,,");
+  list.push("	Villa-71	,Suresh kumar Sharma,,,,,,");
+  list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
+  list.push("	Villa-73	,Richa Sharma,,,,,,");
+  list.push("	Villa-74	,,,,,,,");
+  list.push("	Villa-75	,,,,,,,");
+  list.push("	Villa-76	,,,,,,,");
+  list.push("	Villa-77	,,,,,,,");
+  list.push("	Villa-78	,,,,,,,");
+  list.push("	Villa-79	,,,,,,,");
+  list.push("	Villa-80	,,,,,,,");
+  list.push("	Villa-81	,,,,,,,");
+  list.push("	Villa-82	,,,,,,,");
+  list.push("	Villa-83	,,,,,,,");
+  list.push("	Villa-84	,,,,,,,");
+  list.push("	Villa-85	,,,,,,,");
+  list.push("	Villa-86	,,,,,,,");
+  list.push("	Villa-87	,,,,,,,");
+  list.push("	Villa-88	,Pankaj Chauhan,,,,,,");
+  list.push("	Villa-89	,,,,,,,");
+  list.push("	Villa-90	,,,,,,,");
+  list.push("	Villa-91	,,,,,,,");
+  list.push("	Villa-92	,,,,,,,");
+  list.push("	Villa-93	,,,,,,,");
+  list.push("	Villa-94	,,,,,,,");
+  list.push("	Villa-95	,,,,,,,");
+  list.push("	Villa-96	,,,,,,,");
+  list.push("	Villa-97	,,,,,,,");
+  list.push("	Villa-98	,,,,,,,");
+  list.push("	Villa-99	,,,,,,,");
+  list.push("	Villa-100	,,,,,,,");
 
 
 	 generateTable(list)
@@ -251,7 +251,7 @@ function generateTable(list){
 	var count =1;
 	$(list).each(function(){
 		var val = this.split(",");
-		var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td><td>"+val[3]+"</td><td>"+val[4]+"</td><td>"+val[5]+"</td></tr>";
+		var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td><td>"+val[3]+"</td><td>"+val[4]+"</td><td>"+val[5]+"</td><td>"+val[6]+"</td><td>"+val[7]+"</td></tr>";
 		$("#displayTableDetails").append(tr);
 		count++;
 	});
