--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -135,9 +135,9 @@
          var list = [];
          
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
-        list.push("Collection ,Villa 65,4500,C");
-        list.push("Collection ,Villa 45,1500,C");
-        list.push("Bill book print (in Process) ,Villa 65,-800,D");
+        list.push("Collection ,Villa 65,31500,C");
+        list.push("Collection ,Villa 45,3000,C");
+        //list.push("Bill book print (in Process) ,Villa 65,-800,D");
 
          generateTable(list)
          SetBalanceColor();
