--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -129,30 +129,33 @@
      var list = [];
   
 
-     list.push("Villa-04,@Bhupesh Saini,@9829325960,@2,@Owner"); 
+     list.push("Villa-04,@Bhupesh Saini,@9829325960,@4,@Owner"); 
+     list.push("Villa-05,@Shishir Maltiyar,@8209854376,@3,@Owner"); 
      list.push("Villa-07,@Rahul Pandey,@9672125813,@3,@Owner"); 
      list.push("Villa-09,@Raghvendra Sharma,@7976767857,@3,@Owner"); 
-     list.push("Villa-10,@Jogendra Sachdeva,@9828080386,@2,@Owner"); 
-     list.push("Villa-12,@Gaurav Kothari,@9982567222,@3,@Owner"); 
+     list.push("Villa-10,@Jogendra Sachdeva,@9828080386,@3,@Owner"); 
+     list.push("Villa-11,@Kuldeep Ji,@9928499998,@5,@Owner"); 
+     list.push("Villa-12,@Gaurav Kothari,@9982567222,@2,@Owner"); 
      list.push("Villa-13,@Anil Sharma,@9983344889,@4,@Owner"); 
-     list.push("Villa-20,@ Ved Prakash Parashar,@9462071435,@3,@Owner"); 
+     list.push("Villa-20,@Ved Prakash Parashar,@9462071435,@3,@Owner"); 
      list.push("Villa-24,@Abhimanyu Saraswat,@9461594523,@4,@Owner"); 
      list.push("Villa-26,@Rakesh Kumar,@9079205061,@3,@Owner"); 
-     list.push("Villa-27,@Deepesh Sharma,@9829192929,@2,@Owner"); 
+     list.push("Villa-27,@Deepesh Sharma,@9829192929,@3,@Owner"); 
      list.push("Villa-28,@Mohit Juneja,@7014643282,@4,@Owner"); 
+     list.push("Villa-32,@Vaibhav Tomar,@9560055323,@3,@Owner"); 
      list.push("Villa-33,@Prakash Joshi,@8128028832,@2,@Owner"); 
      list.push("Villa-34,@Vijay Meena,@9667392585,@3,@Owner"); 
-     list.push("Villa-37,@Gajendra Sharma,@9166122226,@3,@Owner"); 
-     list.push("Villa-39,@Manish Salvi,@9024048874,@3,@Owner"); 
+     list.push("Villa-37,@Gajendra Sharma,@9166122226,@5,@Owner"); 
+     list.push("Villa-39,@Manish Salvi,@9024048874,@4,@Owner"); 
      list.push("Villa-42,@Prakash Gaur,@9887444483,@2,@Owner"); 
-     list.push("Villa-43,@Arun Tripathi,@8003068888,@3,@Owner"); 
-     list.push("Villa-44,@Ravindra Verma,@9928309236,@3,@Owner"); 
-     list.push("Villa-45,@Nand Singh Rajawat,@9928438888,@3,@Owner"); 
-     list.push("Villa-46,@Vikas Mahala,@8561811965,@3,@Owner"); 
+     list.push("Villa-43,@Arun Tripathi,@8003068888,@6,@Owner"); 
+     list.push("Villa-44,@Ravindra Verma,@9928309236,@4,@Owner"); 
+     list.push("Villa-45,@Nand Singh Rajawat,@9928438888,@4,@Owner"); 
+     list.push("Villa-46,@Vikas Mahala,@8561811965,@2,@Owner"); 
      list.push("Villa-47,@Manoj Ji,@9460070338,@4,@Owner"); 
-     list.push("Villa-48,@R C Sharma ,@7737061033,@5,@Owner"); 
-     list.push("Villa-52,@Shailesh Bansal,@9461856524,@3,@Owner"); 
-     list.push("Villa-53,@Rohit Jain,@9828576337,@3,@Owner"); 
+     list.push("Villa-48,@R C Sharma ,@7737061033,@3,@Owner"); 
+     list.push("Villa-52,@Shailesh Bansal,@9461856524,@4,@Owner"); 
+     list.push("Villa-53,@Rohit Jain,@9828576337,@4,@Owner"); 
      list.push("Villa-63,@Yogesh Ji,@8583956466,@4,@Owner"); 
      list.push("Villa-64,@Sahil Meghnani,@9929080804,@2,@Owner");
      list.push("Villa-65,@Jalaj Rajpurohit,@9820684534,@3,@Owner");
@@ -163,8 +166,9 @@
      list.push("Villa-71,@Suresh kumar Sharma,@8875115223,@3,@Owner"); 
      list.push("Villa-72,@Nikesh Chaudhary,@9828030761,@3,@Owner"); 
      list.push("Villa-73,@Richa Sharma,@9811547001,@2,@Owner"); 
+     list.push("Villa-76,@S N Nagal,@9413769696,@4,@Owner"); 
      list.push("Villa-86,@Surendra Agrawal,@9414002683,@3,@Owner"); 
-     list.push("Villa-88,@Pankaj Chauhan,@9772525987,@3,@Owner"); 
+     list.push("Villa-88,@Pankaj Chauhan,@9772525987,@4,@Owner"); 
      
       
      generateTable(list)
