--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -143,16 +143,16 @@
   list.push("	Villa-1	,,,,,,,");
   list.push("	Villa-2	,,,,,,,");
   list.push("	Villa-3	,,,,,,,");
-  list.push("	Villa-4	,Bhupesh Saini,,,,,,");
-  list.push("	Villa-5	,,,,,,,");
+  list.push("	Villa-4	,Bhupesh Saini,500,500,500,,,");
+  list.push("	Villa-5	,Shishir Maltiyar,500,500,500,,,");
   list.push("	Villa-6	,,,,,,,");
-  list.push("	Villa-7	,Rahul Pandey,,,,,,");
+  list.push("	Villa-7	,Rahul Pandey,500,500,500,,,");
   list.push("	Villa-8	,,,,,,,");
   list.push("	Villa-9	,Raghvendra Sharma,,,,,,");
-  list.push("	Villa-10	,Jogendra Sachdeva,,,,,,");
+  list.push("	Villa-10	,Jogendra Sachdeva,500,500,500,,,");
   list.push("	Villa-11	,,,,,,,");
-  list.push("	Villa-12	,Gaurav Kothari,,,,,,");
-  list.push("	Villa-13	,Anil Sharma,,,,,,");
+  list.push("	Villa-12	,Gaurav Kothari,500,500,500,,,");
+  list.push("	Villa-13	,Anil Sharma,500,500,500,,,");
   list.push("	Villa-14	,,,,,,,");
   list.push("	Villa-15	,,,,,,,");
   list.push("	Villa-16	,,,,,,,");
@@ -163,36 +163,36 @@
   list.push("	Villa-21	,,,,,,,");
   list.push("	Villa-22	,,,,,,,");
   list.push("	Villa-23	,,,,,,,");
-  list.push("	Villa-24	,Abhimanyu Saraswat,,,,,,");
+  list.push("	Villa-24	,Abhimanyu Saraswat,500,500,500,,,");
   list.push("	Villa-25	,,,,,,,");
   list.push("	Villa-26	,Rakesh Kumar,,,,,,");
   list.push("	Villa-27	,Deepesh Sharma,,,,,,");
-  list.push("	Villa-28	,Mohit Juneja,,,,,,");
+  list.push("	Villa-28	,Mohit Juneja,500,500,500,,,");
   list.push("	Villa-29	,,,,,,,");
   list.push("	Villa-30	,,,,,,,");
   list.push("	Villa-31	,,,,,,,");
-  list.push("	Villa-32	,,,,,,,");
+  list.push("	Villa-32	,Vaibhav Tomar,500,500,500,,,");
   list.push("	Villa-33	,Prakash Joshi,500,500,500,,,");
-  list.push("	Villa-34	,Vijay Meena,,,,,,");
+  list.push("	Villa-34	,Vijay Meena,500,500,500,,,");
   list.push("	Villa-35	,,,,,,,");
   list.push("	Villa-36	,,,,,,,");
-  list.push("	Villa-37	,Gajendra Sharma,,,,,,");
+  list.push("	Villa-37	,Gajendra Sharma,500,500,500,,,");
   list.push("	Villa-38	,,,,,,,");
   list.push("	Villa-39	,Manish Salvi,,,,,,");
   list.push("	Villa-40	,,,,,,,");
   list.push("	Villa-41	,,,,,,,");
   list.push("	Villa-42	,,,,,,,");
-  list.push("	Villa-43	,Arun Tripathi,,,,,,");
-  list.push("	Villa-44	,Ravindra Verma,,,,,,,");
+  list.push("	Villa-43	,Arun Tripathi,500,500,500,,,");
+  list.push("	Villa-44	,Ravindra Verma,500,500,500,,,,");
   list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,,,");
   list.push("	Villa-46	,Vikas Mahala,,,,,,");
   list.push("	Villa-47	,Manoj Ji,,,,,,");
-  list.push("	Villa-48	,R C Sharma,,,,,,");
+  list.push("	Villa-48	,R C Sharma,500,500,500,,,");
   list.push("	Villa-49	,,,,,,,");
   list.push("	Villa-50	,,,,,,,");
   list.push("	Villa-51	,,,,,,,");
-  list.push("	Villa-52	,Shailesh Bansal,,,,,,");
-  list.push("	Villa-53	,Rohit Jain,,,,,,");
+  list.push("	Villa-52	,Shailesh Bansal,500,500,500,,,");
+  list.push("	Villa-53	,Rohit Jain,500,500,500,,,");
   list.push("	Villa-54	,,,,,,,");
   list.push("	Villa-55	,,,,,,,");
   list.push("	Villa-56	,,,,,,,");
@@ -208,14 +208,14 @@
   list.push("	Villa-66	,,,,,,,");
   list.push("	Villa-67	,Abhishek Jaiman,,,,,,");
   list.push("	Villa-68	,Shrish Jaiman,,,,,,");
-  list.push("	Villa-69	,Piyush Ji,,,,,,");
+  list.push("	Villa-69	,Piyush Ji,500,500,500,,,");
   list.push("	Villa-70	,Vineet Sharma,,,,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,,,,,,");
   list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
   list.push("	Villa-73	,Richa Sharma,500,500,500,,,");
   list.push("	Villa-74	,,,,,,,");
   list.push("	Villa-75	,,,,,,,");
-  list.push("	Villa-76	,,,,,,,");
+  list.push("	Villa-76	,S N Nagal,500,500,500,,,");
   list.push("	Villa-77	,,,,,,,");
   list.push("	Villa-78	,,,,,,,");
   list.push("	Villa-79	,,,,,,,");
@@ -225,7 +225,7 @@
   list.push("	Villa-83	,,,,,,,");
   list.push("	Villa-84	,,,,,,,");
   list.push("	Villa-85	,,,,,,,");
-  list.push("	Villa-86	,Surendra Agrawal,,,,,,");
+  list.push("	Villa-86	,Surendra Agrawal,500,500,500,,,");
   list.push("	Villa-87	,,,,,,,");
   list.push("	Villa-88	,Pankaj Chauhan,,,,,,");
   list.push("	Villa-89	,,,,,,,");
