--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -202,7 +202,7 @@
   list.push("	Villa-60	,,,,,,,");
   list.push("	Villa-61	,,,,,,,");
   list.push("	Villa-62	,,,,,,,");
-  list.push("	Villa-63	,Yogesh Ji,,,,,,");
+  list.push("	Villa-63	,Yogesh Ji,500,500,500,,,");
   list.push("	Villa-64	,Sahil Meghnani,,,,,,");
   list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,,,");
   list.push("	Villa-66	,,,,,,,");
