--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -159,13 +159,13 @@
   list.push("	Villa-17	,,,,,,,");
   list.push("	Villa-18	,,,,,,,");
   list.push("	Villa-19	,,,,,,,");
-  list.push("	Villa-20	,Ved Prakash Parashar,,,,,,");
+  list.push("	Villa-20	,Ved Prakash Parashar,500,500,500,,,");
   list.push("	Villa-21	,,,,,,,");
   list.push("	Villa-22	,,,,,,,");
   list.push("	Villa-23	,,,,,,,");
   list.push("	Villa-24	,Abhimanyu Saraswat,500,500,500,,,");
   list.push("	Villa-25	,,,,,,,");
-  list.push("	Villa-26	,Rakesh Kumar,,,,,,");
+  list.push("	Villa-26	,Rakesh Kumar,500,500,500,,,");
   list.push("	Villa-27	,Deepesh Sharma,,,,,,");
   list.push("	Villa-28	,Mohit Juneja,500,500,500,,,");
   list.push("	Villa-29	,,,,,,,");
@@ -178,10 +178,10 @@
   list.push("	Villa-36	,,,,,,,");
   list.push("	Villa-37	,Gajendra Sharma,500,500,500,,,");
   list.push("	Villa-38	,,,,,,,");
-  list.push("	Villa-39	,Manish Salvi,,,,,,");
+  list.push("	Villa-39	,Manish Salvi,500,500,500,,,");
   list.push("	Villa-40	,,,,,,,");
   list.push("	Villa-41	,,,,,,,");
-  list.push("	Villa-42	,,,,,,,");
+  list.push("	Villa-42	,Prakash Ji,500,500,500,,,");
   list.push("	Villa-43	,Arun Tripathi,500,500,500,,,");
   list.push("	Villa-44	,Ravindra Verma,500,500,500,,,,");
   list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,,,");
@@ -192,7 +192,7 @@
   list.push("	Villa-50	,,,,,,,");
   list.push("	Villa-51	,,,,,,,");
   list.push("	Villa-52	,Shailesh Bansal,500,500,500,,,");
-  list.push("	Villa-53	,Rohit Jain,500,500,500,,,");
+  list.push("	Villa-53	,Rohit Jain,,,,,,");
   list.push("	Villa-54	,,,,,,,");
   list.push("	Villa-55	,,,,,,,");
   list.push("	Villa-56	,,,,,,,");
