--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -184,14 +184,14 @@
   list.push("	Villa-43	,Arun Tripathi,500,500,500,,,");
   list.push("	Villa-44	,Ravindra Verma,500,500,500,,,,");
   list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,,,");
-  list.push("	Villa-46	,Vikas Mahala,,,,,,");
+  list.push("	Villa-46	,Vikas Mahala,500,500,500,,,");
   list.push("	Villa-47	,Manoj Ji,,,,,,");
   list.push("	Villa-48	,R C Sharma,500,500,500,,,");
   list.push("	Villa-49	,,,,,,,");
   list.push("	Villa-50	,,,,,,,");
   list.push("	Villa-51	,,,,,,,");
   list.push("	Villa-52	,Shailesh Bansal,500,500,500,,,");
-  list.push("	Villa-53	,Rohit Jain,,,,,,");
+  list.push("	Villa-53	,Rohit Jain,500,500,500,,,");
   list.push("	Villa-54	,,,,,,,");
   list.push("	Villa-55	,,,,,,,");
   list.push("	Villa-56	,,,,,,,");
