--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -208,7 +208,7 @@
   list.push("	Villa-67	,Abhishek Jaiman,,,,,,");
   list.push("	Villa-68	,Shrish Jaiman,,,,,,");
   list.push("	Villa-69	,Piyush Ji,500,500,500,,,");
-  list.push("	Villa-70	,Vineet Sharma,,,,,,");
+  list.push("	Villa-70	,Vineet Sharma,500,500,500,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,,,,,,");
   list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
   list.push("	Villa-73	,Richa Sharma,500,500,500,,,");
