--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -135,9 +135,9 @@
          var list = [];
          
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
-        list.push("Collection ,Villa 65,36000,C");
+        list.push("Collection ,Villa 65,37500,C");
         list.push("Collection ,Villa 45,7500,C");
-        //list.push("Bill book print (in Process) ,Villa 65,-800,D");
+        list.push("Bill receipt book,Villa 65,-600,D");
 
          generateTable(list)
          SetBalanceColor();
