--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -185,7 +185,7 @@
   list.push("	Villa-44	,Ravindra Verma,500,500,500,,,,");
   list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,,,");
   list.push("	Villa-46	,Vikas Mahala,500,500,500,,,");
-  list.push("	Villa-47	,Manoj Ji,,,,,,");
+  list.push("	Villa-47	,Manoj Ji,500,500,500,,,");
   list.push("	Villa-48	,R C Sharma,500,500,500,,,");
   list.push("	Villa-49	,,,,,,,");
   list.push("	Villa-50	,,,,,,,");
