--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -205,8 +205,8 @@
   list.push("	Villa-64	,Sahil Meghnani,,,,,,");
   list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,,,");
   list.push("	Villa-66	,,,,,,,");
-  list.push("	Villa-67	,Abhishek Jaiman,,,,,,");
-  list.push("	Villa-68	,Shrish Jaiman,,,,,,");
+  list.push("	Villa-67	,Abhishek Jaiman,500,500,500,,,");
+  list.push("	Villa-68	,Shrish Jaiman,500,500,500,,,");
   list.push("	Villa-69	,Piyush Ji,500,500,500,,,");
   list.push("	Villa-70	,Vineet Sharma,500,500,500,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,,,,,,");
