--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -135,6 +135,7 @@
          var list = [];
          
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
+        list.push("Previous function balance,Villa 45,4500,C");
         list.push("Collection ,Villa 65,40500,C");
         list.push("Collection ,Villa 45,9000,C");
         list.push("Bill receipt book,Villa 65,-600,D");
