--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -209,7 +209,7 @@
   list.push("	Villa-68	,Shrish Jaiman,500,500,500,,,");
   list.push("	Villa-69	,Piyush Ji,500,500,500,,,");
   list.push("	Villa-70	,Vineet Sharma,500,500,500,,,");
-  list.push("	Villa-71	,Suresh kumar Sharma,,,,,,");
+  list.push("	Villa-71	,Suresh kumar Sharma,500,500,500,,,");
   list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
   list.push("	Villa-73	,Richa Sharma,500,500,500,,,");
   list.push("	Villa-74	,,,,,,,");
