--- a/index.html
+++ b/index.html
@@ -76,16 +76,15 @@
 
 			</section>
 		</header>
-		<!-- <div class="container">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-12" align="center">
-					<video width="320" height="240" controls> 
-					<iframe src="img/SP_COVID19.ppsx" width="320px" heigt="240px"></iframe>
-						<source src="img\SP_COVID19.mp4" type=video/mp4>
-					</video> 
+					<img id="myid" class="NO-CACHE" data-src="img/Poshbada.jpg"  width="320px" heigt="240px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+
+				
 				</div>
 			</div>
-		</div> -->
+		</div>
 
 		<!--<section class="carosal-area indeximage">
         <div class="container">
