--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -188,7 +188,7 @@
   list.push("	Villa-47	,Manoj Ji,500,500,500,,,");
   list.push("	Villa-48	,R C Sharma,500,500,500,,,");
   list.push("	Villa-49	,,,,,,,");
-  list.push("	Villa-50	,,,,,,,");
+  list.push("	Villa-50	,Praveen Garg,500,500,500,,,");
   list.push("	Villa-51	,,,,,,,");
   list.push("	Villa-52	,Shailesh Bansal,500,500,500,,,");
   list.push("	Villa-53	,Rohit Jain,500,500,500,,,");
@@ -202,12 +202,12 @@
   list.push("	Villa-61	,,,,,,,");
   list.push("	Villa-62	,,,,,,,");
   list.push("	Villa-63	,Yogesh Ji,500,500,500,,,");
-  list.push("	Villa-64	,Sahil Meghnani,,,,,,");
+  list.push("	Villa-64	,Sahil Meghnani,500,500,500,,,");
   list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,,,");
   list.push("	Villa-66	,,,,,,,");
   list.push("	Villa-67	,Abhishek Jaiman,500,500,500,,,");
   list.push("	Villa-68	,Shrish Jaiman,500,500,500,,,");
-  list.push("	Villa-69	,Piyush Ji,500,500,500,,,");
+  list.push("	Villa-69	,Piyush Sharma,500,500,500,,,");
   list.push("	Villa-70	,Vineet Sharma,500,500,500,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,500,500,500,,,");
   list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
