--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 			</section>
 		</header>
-		<div class="container">
+		<!--<div class="container">
 			<div class="row">
 				<div class="col-md-12" align="center">
 					<img id="myid" class="NO-CACHE" data-src="img/Poshbada.jpg"  width="320px" heigt="240px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
@@ -84,7 +84,7 @@
 				
 				</div>
 			</div>
-		</div>
+		</div>-->
 
 		<!--<section class="carosal-area indeximage">
         <div class="container">
