--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -72,7 +72,7 @@
 
                 <h4 style="color:rgb(156, 10, 25)">  Monthly Expenditure = <span id="TotalD"></span> </h4>
                <br>
-                <h4 style="color:darkgreen">  For any clarification regarding Poshbada function, please connect with Vill 65 or 86. </h4>
+                <h4 style="color:darkgreen">  For any clarification regarding Poshbada function details, please connect with Villa 65 or 86. </h4>
                 
                 <fieldset>
                     <label for="Name">Select Month</label>
