--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -142,7 +142,7 @@
         list.push("Previous function balance,Villa 45,4500,C");
         list.push("Collection ,Villa 65,43500,C");
         list.push("Collection ,Villa 45,10500,C");
-        list.push("Bill receipt book,Villa 65,-600,D");
+       // list.push("Bill receipt book,Villa 65,-600,D");
         list.push("Vegetables,Villa 65,-434,D");
         list.push("Disposal,Villa 65,-980,D");
         list.push("Gas ki Tanki,Villa 65,-2000,D");
