--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 									<!--<li><a href="COVID19.html">COVID - 19</a></li>-->
 									<li><a href="OwnersRentDetails.html">Owners\Tenants Details</a></li>
 									<li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
+									<li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
 									<!--<li><a href="OneTimeCollection.html">One Time Collection</a></li>-->
 									<li><a href="MeetingHistory.html">Meeting History</a></li>
 									<!--<li><a href="VisitorDetails.html">Visitor Details</a></li>-->
@@ -100,9 +101,13 @@
         </div>-->
         
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
-	   <marquee  scrollamount="5" style= "color:rgb(194, 5, 93) ; font-size:20px" height="30px" > 
-		Upcoming January Month Celebration: 8 January Paush Bada, Dinner (Menu: Halwa+Puri+Sabji) | 26 January, Republic Day
-   </marquee>'
+	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
+		<p> Upcoming Event: 26 January, Republic Day</p>
+   </marquee>
+   <marquee behavior="slide" direction="left">
+   <img src="img/SV_RD.png" width="400" height="150" />
+
+</marquee>'
 		<section class="our_activity">
 			<div class="container">
 				<div class="row">
