--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -223,7 +223,7 @@
   list.push("	Villa-82	,,,,,,,");
   list.push("	Villa-83	,,,,,,,");
   list.push("	Villa-84	,,,,,,,");
-  list.push("	Villa-85	,,,,,,,");
+  list.push("	Villa-85	,Pradeep Verma,500,500,500,,,");
   list.push("	Villa-86	,Surendra Agrawal,500,500,500,,,");
   list.push("	Villa-87	,,,,,,,");
   list.push("	Villa-88	,Pankaj Chauhan,,,,,,");
