--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -168,6 +168,7 @@
      list.push("Villa-72,@Nikesh Chaudhary,@9828030761,@3,@Owner"); 
      list.push("Villa-73,@Richa Sharma,@9811547001,@7,@Owner"); 
      list.push("Villa-76,@S N Nagal,@9413769696,@4,@Owner"); 
+     list.push("Villa-85,@Pradeep Verma,@,@3,@Owner"); 
      list.push("Villa-86,@Surendra Agrawal,@9414002683,@3,@Owner"); 
      list.push("Villa-88,@Pankaj Chauhan,@9772525987,@4,@Owner"); 
      
