--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -226,7 +226,7 @@
   list.push("	Villa-85	,Pradeep Verma,500,500,500,,,");
   list.push("	Villa-86	,Surendra Agrawal,500,500,500,,,");
   list.push("	Villa-87	,,,,,,,");
-  list.push("	Villa-88	,Pankaj Chauhan,,,,,,");
+  list.push("	Villa-88	,Pankaj Chauhan,500,500,500,,,");
   list.push("	Villa-89	,,,,,,,");
   list.push("	Villa-90	,,,,,,,");
   list.push("	Villa-91	,,,,,,,");
