--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -151,6 +151,7 @@
         list.push("Shamiyana\Chairs,Villa 65,-4000,D");
         list.push("Khana banane wale Pandit,Villa 65,-2500,D");
         list.push("Pani Bottle,Villa 65,-800,D");
+        list.push("PaushBada Extra member collection,Villa 65,500,C");
 
          generateTable(list)
          SetBalanceColor();
