--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -201,13 +201,13 @@
   list.push("	Villa-62	,,,,,,,");
   list.push("	Villa-63	,Yogesh Ji,,,,,,");
   list.push("	Villa-64	,Sahil Meghnani,,,,,,");
-  list.push("	Villa-65	,Jalaj Rajpurohit,,,,,,");
+  list.push("	Villa-65	,Jalaj Rajpurohit,1000,1000,1000,,,");
   list.push("	Villa-66	,,,,,,,");
-  list.push("	Villa-67	,Abhishek Jaiman,,,,,,");
-  list.push("	Villa-68	,Shrish Jaiman,,,,,,");
-  list.push("	Villa-69	,Piyush Sharma,,,,,,");
+  list.push("	Villa-67	,Abhishek Jaiman,1000,1000,1000,,,");
+  list.push("	Villa-68	,Shrish Jaiman,1000,1000,1000,,,");
+  list.push("	Villa-69	,Piyush Sharma,1000,1000,1000,,,");
   list.push("	Villa-70	,Vineet Sharma,,,,,,");
-  list.push("	Villa-71	,Suresh kumar Sharma,,,,,,");
+  list.push("	Villa-71	,Suresh kumar Sharma,1000,1000,1000,,,");
   list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
   list.push("	Villa-73	,Richa Sharma,,,,,,");
   list.push("	Villa-74	,,,,,,,");
