--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Upcoming Event: 26 January, Republic Day</p>
+		<p> Upcoming Event: 26 January, Republic Day, Time: 9:00 AM </p>
    </marquee>
    <marquee behavior="slide" direction="left">
    <img src="img/SV_RD.png" width="400" height="150" />
