--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -138,9 +138,9 @@
          var list = [];
          
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
-        list.push("Previous function balance,Villa 45,4500,C");
-        list.push("Collection ,Villa 65,43500,C");
-        list.push("Collection ,Villa 45,13500,C");
+        list.push("Previous function balance,Villa 65,4500,C");
+        list.push("Collection ,Villa 65,57000,C");
+        //list.push("Collection ,Villa 45,13500,C");
         list.push("PaushBada Extra member collection,Villa 65,500,C");
        // list.push("Bill receipt book,Villa 65,-600,D");
         list.push("Vegetables,Villa 65,-434,D");
@@ -151,6 +151,8 @@
         list.push("Shamiyana\Chairs,Villa 65,-4000,D");
         list.push("Khana banane wale Pandit,Villa 65,-2500,D");
         list.push("Pani Bottle,Villa 65,-800,D");
+        list.push("26-Jan Sweets\Bundi,Villa 65,-1200,D");
+        list.push("26-Jan Flag\Rasi\Flower,Villa 65,-150,D");
 
          generateTable(list)
          SetBalanceColor();
