--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -146,9 +146,9 @@
   list.push("	Villa-7	,Rahul Pandey,,,,,,");
   list.push("	Villa-8	,,,,,,,");
   list.push("	Villa-9	,Raghvendra Sharma,,,,,,");
-  list.push("	Villa-10	,Jogendra Sachdeva,,,,,,");
+  list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,,,");
   list.push("	Villa-11	,,,,,,,");
-  list.push("	Villa-12	,Gaurav Kothari,,,,,,");
+  list.push("	Villa-12	,Gaurav Kothari,1000,1000,1000,,,");
   list.push("	Villa-13	,Anil Sharma,1000,1000,1000,,,");
   list.push("	Villa-14	,,,,,,,");
   list.push("	Villa-15	,,,,,,,");
@@ -160,7 +160,7 @@
   list.push("	Villa-21	,,,,,,,");
   list.push("	Villa-22	,,,,,,,");
   list.push("	Villa-23	,,,,,,,");
-  list.push("	Villa-24	,Abhimanyu Saraswat,,,,,,");
+  list.push("	Villa-24	,Abhimanyu Saraswat,1000,1000,1000,,,");
   list.push("	Villa-25	,,,,,,,");
   list.push("	Villa-26	,Rakesh Kumar,1000,1000,1000,,,");
   list.push("	Villa-27	,Deepesh Sharma,,,,,,");
@@ -170,7 +170,7 @@
   list.push("	Villa-31	,,,,,,,");
   list.push("	Villa-32	,Vaibhav Tomar,,,,,,");
   list.push("	Villa-33	,Prakash Joshi,1000,1000,1000,,,");
-  list.push("	Villa-34	,Vijay Meena,,,,,,");
+  list.push("	Villa-34	,Vijay Meena,1000,1000,1000,,,");
   list.push("	Villa-35	,,,,,,,");
   list.push("	Villa-36	,,,,,,,");
   list.push("	Villa-37	,Gajendra Sharma,1000,1000,1000,,,");
@@ -212,7 +212,7 @@
   list.push("	Villa-73	,Richa Sharma,,,,,,");
   list.push("	Villa-74	,,,,,,,");
   list.push("	Villa-75	,,,,,,,");
-  list.push("	Villa-76	,S N Nagal,,,,,,");
+  list.push("	Villa-76	,S N Nagal,1000,1000,1000,,,");
   list.push("	Villa-77	,,,,,,,");
   list.push("	Villa-78	,,,,,,,");
   list.push("	Villa-79	,,,,,,,");
@@ -221,10 +221,10 @@
   list.push("	Villa-82	,,,,,,,");
   list.push("	Villa-83	,,,,,,,");
   list.push("	Villa-84	,,,,,,,");
-  list.push("	Villa-85	,Pradeep Verma,,,,,,");
-  list.push("	Villa-86	,Surendra Agrawal,,,,,,");
+  list.push("	Villa-85	,Pradeep Verma,1000,1000,1000,,,");
+  list.push("	Villa-86	,Surendra Agrawal,1000,1000,1000,,,");
   list.push("	Villa-87	,,,,,,,");
-  list.push("	Villa-88	,Pankaj Chauhan,,,,,,");
+  list.push("	Villa-88	,Pankaj Chauhan,1000,1000,1000,,,");
   list.push("	Villa-89	,,,,,,,");
   list.push("	Villa-90	,,,,,,,");
   list.push("	Villa-91	,,,,,,,");
