--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -151,8 +151,8 @@
         list.push("Shamiyana\Chairs,Villa 65,-4000,D");
         list.push("Khana banane wale Pandit,Villa 65,-2500,D");
         list.push("Pani Bottle,Villa 65,-800,D");
-        list.push("26-Jan Sweets\Bundi,Villa 65,-1200,D");
-        list.push("26-Jan Flag\Rasi\Flower,Villa 65,-150,D");
+        list.push("26 Jan Sweets\Bundi,Villa 65,-1200,D");
+        list.push("26 Jan Flag and Flower,Villa 65,-150,D");
 
          generateTable(list)
          SetBalanceColor();
